Security and GC logging added Some bugs fixed