@@ -9,5 +9,10 @@ RUN mvn package
 # Используем официальный образ OpenJDK для запуска приложения
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
+RUN mkdir -p /var/log
 COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", \
+            "-XX:+UseG1GC", \
+            "-XX:+PrintGCDetails", \
+            "-Xlog:gc,safepoint:/var/log/gc.log::filecount=5,filesize=20M", \
+            "-jar", "app.jar"]
